# gdoid

./: GDOI_PRIMER  INSTALL  LICENSE  Makefile.am  Makefile.in  config.h  config.h.in  configure  configure.in
app_client/: Makefile.am  Makefile.in  app_stub.c
config/: README
samples/iec90-5/: START_CLIENT  START_KS  gdoi_client.conf  gdoi_ks.conf
samples/iec90-5/CVS/: Entries  Repository
samples/loopback/: START_CLIENT  START_KS  gdoi_client.conf  gdoi_ks.conf  sample_output_client  sample_output_ks
samples/loopback/CVS/: Entries  Repository  Tag
samples/three-clients/: START_CLIENT1  START_CLIENT2  START_CLIENT3  START_KS  gdoi_client1.conf  gdoi_client2.conf  gdoi_client3.conf  gdoi_ks.conf  sample_output_client1  sample_output_ks
samples/three-clients/CVS/: Entries  Repository  Root
src/: Makefile.am  Makefile.in  app.c  app.h  attribute.c  attribute.h  cert.c  cert.h  conf.c  conf.h  connection.c  connection.h  constants.c  constants.h  cookie.c  cookie.h  crypto.c  crypto.h  dh.c  dh.h  doi.c  doi.h  dyn.h  exchange.c  exchange.h  exchange_num.cst  field.c  field.h  gdoi.h  gdoi_app_client.c  gdoi_app_client.h  gdoi_app_iec90_5_attr.h  gdoi_app_num.cst  gdoi_doi.c  gdoi_fld.fld  gdoi_iec90_5.c  gdoi_iec90_5.h  gdoi_iec90_5_protos.h  gdoi_num.cst  gdoi_phase2.c  (+75 more)
src/sysdep/linux/: pfkeyv2.h
src/sysdep/openbsd/: pf_key_ext.h
